UCS: Box size limits (GSI-2336) (#170)
* Add max_size field to box creation

* Update and add tests

* Make state and max_size exclusive

* Raise an error if the max_size is below the current box size

* Bump UCS to 12.0.0 and monorepo to 12.0.0 too

* EKSS: Supply None for comment arg due to new crypt4gh release

* Update ekss openapi

* DRY out repeated logic in core and add data model to http error class

* Rename errors and add comment

* Fix remaining error key
